--- a/.github/workflows/comments.yml
+++ b/.github/workflows/comments.yml
@@ -8,6 +8,13 @@ jobs:
     if: contains(github.event.comment.html_url, '/pull/')
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 8
       - name: run code
         if: contains(github.event.comment.body, '/run')
         run: |
